<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView android:text="@string/hello_world" android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150dp" />

        <EditText android:id="@+id/edit_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/remote_ip"
            android:layout_gravity="center_horizontal"
            android:lines="1"
            android:singleLine="true"
            android:linksClickable="false"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/textView"
            android:layout_alignEnd="@+id/start" />

        <Button
            android:layout_width="171dp"
            android:layout_height="wrap_content"
            android:text="@string/button_new"
            android:layout_gravity="center_horizontal"
            android:onClick="getTimeOffset"
            android:background="#ff00ffd3"
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/start"
            android:layout_below="@+id/edit_message"
            android:layout_toEndOf="@+id/textView"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />

        <TextView android:text="Time offset" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <TextView android:text="@string/time_offset" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/offset"
            android:layout_gravity="center_horizontal" />

        <TextView android:text="@string/time_offsetAverage" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/offsetAverage"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>


</RelativeLayout>
